# md-to-docx

./: .coderabbit.yaml  .gitignore  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NEW_FEATURES.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  TODO.md  context7.json  eslint.config.js  example-with-new-features.md  jest.config.mjs  package-lock.json  package.json  test-new-features.js  tsconfig.json  typedoc.json
.github/: pull_request_template.md
crates/md-to-docx-core/: Cargo.toml
crates/md-to-docx-core/src/: contract.rs  lib.rs  main.rs  model.rs  parser.rs  renderer.rs
crates/md-to-docx-core/tests/: core_contract.rs  parser_contract.rs
docs/: cli.md  contributing.md  examples.md  getting-started.md  library-api.md  sections-headers-footers.md  skill.md
scripts/: preview-code-highlighting.mjs
src/: cli.ts  documentStyles.ts  docxModel.ts  errors.ts  helpers.ts  index.ts  markdownAst.ts  mdastToDocxModel.ts  modelToDocx.ts  processingLimits.ts  rustCore.ts  sectionBuilder.ts  tocBuilder.ts  types.ts  validation.ts
test-web/: index.html  main.js  package-lock.json  package.json
tests/: cli.test.ts  code-highlighting.test.ts  diagram-rendering.test.ts  helpers.ts  image-security.test.ts  image-size.test.ts  index.test.ts  jest.polyfills.mjs  list-formatting.test.ts  package-consumer.mjs  processing-limits.test.ts  reference-docx-patch.test.ts  rendering.test.ts  rust-core-bridge.test.ts  sections.test.ts  security-regressions.test.ts  style-system-v2.test.ts  table.test.ts  workflow-security.test.ts
(+48 files in other folders)
